# projeto-portal

./: README.md  pyproject.toml
extract/: main.py
